Enhance metrics collection and performance monitoring in client and server. Update README with client implementation details and performance metrics. Add .gitignore entries for .NET, Java, Go, Rust, and Docker artifacts. Improve session initialization and purchase request handling with detailed metrics logging.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,26 @@ npm-debug.log*
 # Test coverage
 coverage/
 .claude/
+
+# .NET
+client/dotnet/**/bin/
+client/dotnet/**/obj/
+*.user
+*.suo
+
+# Java
+client/java-*/out/
+client/java-*/lib/
+client/java-*/target/
+*.class
+*.jar
+
+# Go
+client/go/session-crypto-client
+
+# Rust
+client/rust/target/
+client/rust/Cargo.lock
+
+# Docker
+redis_data/
