Update .gitignore to include Go and Rust artifacts. Revise README to reflect multi-language server implementations, prerequisites, and detailed server startup instructions. Enhance client code to use a shared SecureRandom instance for IV generation in Java clients.

--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,13 @@ client/java-*/target/
 
 # Go
 client/go/session-crypto-client
+server-go/server-go
 
 # Rust
 client/rust/target/
 client/rust/Cargo.lock
+server-rust/target/
+server-rust/Cargo.lock
 
 # Docker
 redis_data/
