--- a/server-rust/Cargo.toml
+++ b/server-rust/Cargo.toml
@@ -2,7 +2,7 @@
 name = "session-crypto-server"
 version = "1.0.0"
 edition = "2024"
-rust-version = "1.92"
+rust-version = "1.85"
 
 [dependencies]
 tokio = { version = "1.43", features = ["full"] }
@@ -11,7 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.22"
 uuid = { version = "1.12", features = ["v4"] }
-aws-lc-rs = "1"
+ring = "0.17"
 rand = "0.8"
 redis = { version = "0.27", features = ["tokio-comp"] }
 tower-http = { version = "0.6", features = ["trace"] }
