Refactor session initialization and purchase request handling across multiple clients to include client ID in AAD construction and request headers. Update .gitignore to exclude additional client artifacts. Remove deprecated key agreement field from session initialization requests.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ server-rust/Cargo.lock
 redis_data/
 target/rust-analyzer/flycheck0/stderr
 target/rust-analyzer/flycheck0/stdout
+client/go/go-client
