--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "fastify": "^5.2.1",
+    "@fastify/cors": "^11.2.0",
     "@fastify/sensible": "^6.0.3",
+    "fastify": "^5.2.1",
     "ioredis": "^5.4.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
-    "typescript": "^5.7.3",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
