--- a/server-rust/Cargo.toml
+++ b/server-rust/Cargo.toml
@@ -14,7 +14,7 @@ uuid = { version = "1.12", features = ["v4"] }
 ring = "0.17"
 rand = "0.8"
 redis = { version = "0.27", features = ["tokio-comp"] }
-tower-http = { version = "0.6", features = ["trace"] }
+tower-http = { version = "0.6", features = ["trace", "cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 hex = "0.4"
