--- a/.gitignore
+++ b/.gitignore
@@ -50,9 +50,16 @@ client/rust/target/
 client/rust/Cargo.lock
 server-rust/target/
 server-rust/Cargo.lock
+server-rust-ring/target/
+server-rust-ring/Cargo.lock
+server-rust-native/target/
+server-rust-native/Cargo.lock
 
 # Docker
 redis_data/
-target/rust-analyzer/flycheck0/stderr
-target/rust-analyzer/flycheck0/stdout
+
+# Rust analyzer (root target directory)
+target/
+
+# Go client binary (alternate name)
 client/go/go-client
