--- a/client/rust/Cargo.toml
+++ b/client/rust/Cargo.toml
@@ -11,5 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.22"
 uuid = { version = "1.12", features = ["v4"] }
-ring = "0.17"
+aws-lc-rs = "1.12"
 rand = "0.8"
