--- a/server-rust-native/Cargo.toml
+++ b/server-rust-native/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "session-crypto-server"
+name = "session-crypto-server-native"
 version = "1.0.0"
 edition = "2024"
 rust-version = "1.85"
@@ -11,7 +11,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.22"
 uuid = { version = "1.12", features = ["v4"] }
-aws-lc-rs = "1.12"
+# Pure Rust crypto crates (RustCrypto project)
+p256 = { version = "0.13", features = ["ecdh"] }
+hkdf = "0.12"
+sha2 = "0.10"
+aes-gcm = "0.10"
 rand = "0.8"
 redis = { version = "0.27", features = ["tokio-comp"] }
 tower-http = { version = "0.6", features = ["trace", "cors"] }
