--- a/server-rust-ring/Cargo.toml
+++ b/server-rust-ring/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "session-crypto-server"
+name = "session-crypto-server-ring"
 version = "1.0.0"
 edition = "2024"
 rust-version = "1.85"
@@ -11,7 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.22"
 uuid = { version = "1.12", features = ["v4"] }
-aws-lc-rs = "1.12"
+ring = "0.17"
 rand = "0.8"
 redis = { version = "0.27", features = ["tokio-comp"] }
 tower-http = { version = "0.6", features = ["trace", "cors"] }
