feat: implement cryptographic session management server with ECDH key exchange, session key derivation, and encrypted endpoints.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,24 @@ services:
       retries: 5
     restart: unless-stopped
 
+  postgres:
+    image: postgres:18-alpine
+    container_name: session-crypto-postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: session_crypto
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
 volumes:
   redis_data:
+  postgres_data:
