--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
     "@fastify/cors": "^11.2.0",
     "@fastify/sensible": "^6.0.3",
     "fastify": "^5.2.1",
-    "ioredis": "^5.4.2"
+    "ioredis": "^5.4.2",
+    "pg": "^8.17.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.16.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
