--- a/server-rust-native/Cargo.toml
+++ b/server-rust-native/Cargo.toml
@@ -17,7 +17,11 @@ hkdf = "0.12"
 sha2 = "0.10"
 aes-gcm = "0.10"
 rand = "0.8"
-redis = { version = "0.27", features = ["tokio-comp"] }
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
+tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
+deadpool-postgres = { version = "0.14", features = ["serde"] }
+native-tls = "0.2"
+postgres-native-tls = "0.5"
 tower-http = { version = "0.6", features = ["trace", "cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
