--- a/server-rust-ring/Cargo.toml
+++ b/server-rust-ring/Cargo.toml
@@ -13,7 +13,11 @@ base64 = "0.22"
 uuid = { version = "1.12", features = ["v4"] }
 ring = "0.17"
 rand = "0.8"
-redis = { version = "0.27", features = ["tokio-comp"] }
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
+tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
+deadpool-postgres = { version = "0.14", features = ["serde"] }
+native-tls = "0.2"
+postgres-native-tls = "0.5"
 tower-http = { version = "0.6", features = ["trace", "cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
