--- a/client/node/package.json
+++ b/client/node/package.json
@@ -2,6 +2,9 @@
   "name": "session-crypto-client",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts"
