--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "name": "session-crypto-server",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
