--- a/client/java-webflux/pom.xml
+++ b/client/java-webflux/pom.xml
@@ -64,10 +64,7 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>com.example.SessionCryptoClient</mainClass>
-                    <arguments>
-                        <argument>${exec.args}</argument>
-                    </arguments>
-                    <commandlineArgs>--enable-preview</commandlineArgs>
+                    <commandlineArgs>${exec.args} --enable-preview</commandlineArgs>
                 </configuration>
             </plugin>
         </plugins>
