--- a/server-rust-native/Cargo.toml
+++ b/server-rust-native/Cargo.toml
@@ -26,3 +26,4 @@ tower-http = { version = "0.6", features = ["trace", "cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 hex = "0.4"
+zeroize = "1.8"
