feat: enhance nonce management and session handling
- Introduced memory nonce store configuration with maximum size and cleanup threshold in .env.example.
- Added negative test cases for Redis down scenarios and memory nonce capacity in README.
- Updated session ID validation and environment variable parsing in session-store and crypto-helpers for improved error handling.
- Refactored session management to ensure secure handling of sensitive data and enforce session ID format validation.

--- a/.env.example
+++ b/.env.example
@@ -138,6 +138,21 @@ TIMESTAMP_WINDOW_MS=300000
 NONCE_TTL_SEC=300
 
 # ============================================
+# Memory Nonce Store Configuration (Fallback)
+# ============================================
+# When Redis is unavailable, nonces are stored in-memory.
+# With sticky sessions, each pod handles a subset of clients.
+
+# Maximum entries in memory nonce store
+# Default: 100000 (100K entries, ~10MB memory)
+MEMORY_NONCE_MAX_SIZE=100000
+
+# Threshold to trigger cleanup (should be < max size)
+# When reached, expired nonces are cleaned up proactively
+# Default: 80000 (80% of max)
+MEMORY_NONCE_CLEANUP_THRESHOLD=80000
+
+# ============================================
 # Client Configuration (Node.js client only)
 # ============================================
 
