--- a/client/node/package.json
+++ b/client/node/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "test:negative": "tsx src/negative-tests.ts"
   },
   "dependencies": {
     "fastify": "^5.2.1"
