--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,9 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --env-file=../.env src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node --env-file=../.env dist/index.js"
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
