feat: add structured logger, negative and positive tests

--- a/identity-service-node/.gitignore
+++ b/identity-service-node/.gitignore
@@ -9,6 +9,9 @@ dist/
 build/
 *.tsbuildinfo
 
+# Compiled JavaScript files in root (TypeScript source in root should compile to dist/)
+/*.js
+
 # Environment variables
 .env
 .env.local
