feat: update environment configuration and session management
- Expanded .env.example with additional server, logging, and database configurations.
- Removed unused session and nonce cache constants from index.ts.
- Refactored session key derivation in session.service.ts for improved security and error handling.
- Ensured sensitive buffers are zeroized in all error paths.
- Updated LRU cache implementation by removing session and nonce cache exports.

--- a/identity-service-node/.env.example
+++ b/identity-service-node/.env.example
@@ -1,10 +1,31 @@
+# =============================================================================
+# Identity Service Node - Environment Configuration
+# =============================================================================
+# Copy this file to .env and update values for your environment
+
+# =============================================================================
 # Server Configuration
+# =============================================================================
 NODE_ENV=development
 PORT=3000
 HOST=0.0.0.0
-LOG_LEVEL=info
+SERVICE_NAME=identity-service-node
 
-# Database Configuration
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+LOG_LEVEL=info
+LOG_FORMAT=json
+LOG_SAMPLE_RATE=100
+SLOW_THRESHOLD_MS=500
+MAX_LOG_BODY_SIZE_BYTES=10240
+
+# =============================================================================
+# Database Configuration (PostgreSQL)
+# =============================================================================
+# NOTE: For Azure PostgreSQL with PgBouncer in transaction pooling mode:
+# - Prepared statements are NOT supported
+# - Set statement_timeout at database level: ALTER DATABASE identity_db SET statement_timeout = '5s';
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=identity_db
@@ -12,23 +33,47 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_POOL_MIN=2
 DATABASE_POOL_MAX=10
+DATABASE_IDLE_TIMEOUT_MS=30000
+DATABASE_CONNECTION_TIMEOUT_MS=30000
+DATABASE_STATEMENT_TIMEOUT_MS=5000
+DATABASE_QUERY_TIMEOUT_MS=10000
 
+# =============================================================================
 # Redis Configuration
+# =============================================================================
 REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
-REDIS_MAX_RECONNECT_ATTEMPTS=5
+# REDIS_PASSWORD=your_redis_password
+REDIS_MAX_RECONNECT_ATTEMPTS=10
 REDIS_RECONNECT_BASE_DELAY_MS=100
-REDIS_RECONNECT_MAX_DELAY_MS=1000
+REDIS_RECONNECT_MAX_DELAY_MS=10000
 
+# =============================================================================
 # Session Configuration
+# =============================================================================
+# TTL values in seconds
+# NOTE: TTL clamping behavior - client-requested TTL values outside [MIN, MAX]
+# are silently clamped to the nearest boundary. TTL of 0 is clamped to MIN.
 SESSION_TTL_MIN_SEC=60
 SESSION_TTL_MAX_SEC=3600
 SESSION_TTL_DEFAULT_SEC=900
 
+# =============================================================================
 # Replay Protection Configuration
+# =============================================================================
+# Timestamp window: requests with timestamps outside ±WINDOW are rejected
 REPLAY_TIMESTAMP_WINDOW_SEC=300
+# Nonce TTL: how long nonces are stored to prevent replay attacks
 REPLAY_NONCE_TTL_SEC=600
 
+# =============================================================================
 # Cache Configuration
-CACHE_CLIENT_TTL_SECONDS=300
+# =============================================================================
+# LRU fallback cache max TTL (used when Redis is unavailable)
 CACHE_LRU_MAX_TTL_SECONDS=600
+
+# =============================================================================
+# HTTP Server Timeouts
+# =============================================================================
+CONNECTION_TIMEOUT_MS=30000
+REQUEST_TIMEOUT_MS=60000
+BODY_LIMIT_BYTES=1048576
