feat: add Windows PowerShell benchmark examples and refactor TTL validation to Authorization-based flow
- Added PowerShell equivalents for all benchmark commands across Node.js, Go, Rust, and .NET clients
- Added PowerShell script for cross-client concurrency testing
- Changed PORT from 3000 to 3001 in .env.example
- Replaced TTL clamping (MIN/MAX/DEFAULT) with Authorization-based TTL determination:
  - Anonymous flow (no Authorization header): 1800s (30 minutes)
  - Authenticated flow (Authorization header present

--- a/identity-service-node/.env.example
+++ b/identity-service-node/.env.example
@@ -7,7 +7,7 @@
 # Server Configuration
 # =============================================================================
 NODE_ENV=development
-PORT=3000
+PORT=3001
 HOST=0.0.0.0
 SERVICE_NAME=identity-service-node
 
@@ -51,11 +51,10 @@ REDIS_RECONNECT_MAX_DELAY_MS=10000
 # Session Configuration
 # =============================================================================
 # TTL values in seconds
-# NOTE: TTL clamping behavior - client-requested TTL values outside [MIN, MAX]
-# are silently clamped to the nearest boundary. TTL of 0 is clamped to MIN.
-SESSION_TTL_MIN_SEC=60
-SESSION_TTL_MAX_SEC=3600
-SESSION_TTL_DEFAULT_SEC=900
+# Anonymous flow (no Authorization header): 30 minutes
+SESSION_TTL_ANONYMOUS_SEC=1800
+# Authenticated flow (Authorization header present): 1 hour
+SESSION_TTL_AUTHENTICATED_SEC=3600
 
 # =============================================================================
 # Replay Protection Configuration
